sass/partials/design/_banner.sass
// Banner region

#banner
  background: $grey-e
  +breakpoint($bp-tablet-land-min)
    overflow: hidden
    padding: 14px 0 11px
  +breakpoint($bp-for-phone-tablet-range)
    background: $grey-hp

// Banner title and subtitles
.banner-title,
.banner-subtitle
  color: $grey-hp-7
  a,
  a:hover,
  a:visited
    color: $grey-hp-7
  a:hover
    border-bottom: 2px solid $grey-hp-7
    text-decoration: none


.banner-title
  font-size: 30px
  font-weight: bold
  line-height: 1
  .page-programs-mba &
    a
      color: $section-blue-grey
      &:hover
        border-bottom: 2px solid $section-blue-grey
        text-decoration: none
    +breakpoint($bp-for-phone-only)
      font-size: 14px
    +breakpoint($bp-for-tablet-range)
      font-size: 18px
  .page-faculty-research &
    a
      color: $grey-hp-7
      &:hover
        border-bottom: 2px solid $grey-hp-7
        text-decoration: none
    +breakpoint($bp-for-phone-only)
      font-size: 14px
      top: 10px
    +breakpoint($bp-for-tablet-range)
      font-size: 18px
      top: 10px
  .page-insights &
    a
      color: $text-black
      &:hover
        border-bottom: 2px solid $text-black
        text-decoration: none
    +breakpoint($bp-for-phone-only)
      font-size: 14px
    +breakpoint($bp-for-tablet-range)
      font-size: 18px
  .page-alumni &
    top: 0
    a
      color: $red
      &:hover
        border-bottom: 2px solid $red
        text-decoration: none
    +breakpoint($bp-tablet-port-max)
      font-size: 26px
      line-height: 1.9
  +breakpoint($bp-tablet-port-max)
    font-size: 100%
    line-height: 0
    padding: 0 15px
    position: relative
    top: -25px
  +breakpoint($bp-mobile-max)
    display: table-cell
    height: 42px
    line-height: 1
    vertical-align: middle
    width: 98%
    top: -44px
  +breakpoint(420px max-width)
    max-width: 210px
    line-height: 1

.banner-subtitle
  font-size: 42px
  line-height: 1.2

.banner-content
  margin: 0 auto
  max-width: $max-width
  position: relative
  +breakpoint(1210px 1000px)
    padding-left: 15px

// Section-specific styling of banner

// Programs (blue)
.page-programs
  .banner-title
    a,
    a:hover,
    a:visited
      color: $section-blue-grey
    a:hover
      border-bottom: 2px solid $section-blue-grey
      text-decoration: none
  +breakpoint(999px max-width)
    min-height: 50px

// Events (taupe)
.page-events
  .banner-title
    +breakpoint(999px max-width)
      min-height: 50px

// No banner on desktop for Stanford GSB Experience, Faculty & Research (taupe)
.page-stanford-gsb-experience,
.page-faculty-research
  #banner
    display: none
    +breakpoint($bp-tablet-port-max)
      display: block

// CIRCLE
.page-faculty-research.page-faculty-research-centers-initiatives
  #banner
    display: block
  // Hide on Centers & Research Initiatives landing desktop
  &.page-node-309826
    #banner
      display: none
      +breakpoint($bp-tablet-port-max)
        display: block

// Insights (black)
.page-insights
  #banner
    background: #dcdcdc
    overflow: visible
    padding: 0

// Alumni (red)
.page-alumni
  #banner
    background: $grey-e
    color: $red

// Alumni navigation in utility
#block-menu-block-32
  // Hide directory and upcoming events links
  .menu-mlid-37621,
  .menu-mlid-37626
    display: none

// Utility region for responsive Alumni menu
.page-alumni #utility
  display: none
  +breakpoint($bp-tablet-port-max)
    display: block
    margin-top: 50px
    position: absolute
    right: 0
    li
      display: inline-block
      +breakpoint($bp-for-phone-only)
        display: table-cell
    a
      color: $text-black
      font-family: $font-demi
      font-size: 13px
      line-height: 1.2
      margin: 0 8px
      +breakpoint($bp-for-phone-only)
        font-size: 7px
        height: 10px
        padding-left: 5px

// First Sidebar
#sidebar
  .sidebar
    h2
      display: none
  +breakpoint($bp-for-tablet-range)
    width: 100%
    .menu
      display: none
    .sidebar
      .block
        h2
          font-size: 16px
          font-weight: normal
          height: 50px
          padding: 7px 15px 8px 13px
          width: 129px
  +breakpoint($bp-tablet-port-max)
    width: 100%
    .menu
      display: none
    .sidebar
      //margin-top: -50px
      h2
        border-left: 1px solid rgba($white, 0.3)
        color: $white
        cursor: pointer
        display: block
        font-size: 12px
        font-weight: normal
        padding: 12px 15px 8px 12px
        position: absolute
        right: 0
        text-transform: capitalize
        top: 0
        width: 101px
        .svg &
          +background(image_url("icons/inThisSection-arrow-down-white.svg") no-repeat 85% 47% $section-blue-grey)
        .no-js &, .no-svg &
          +background(image_url("icons/inThisSection-arrow-down-white-@2x.png") no-repeat 11px 11px $section-blue-grey)
        // Alumni
        .page-alumni &
          background-color: $section-red
          .svg &
            +background(image_url("icons/inThisSection-arrow-down-white.svg") no-repeat 85% 47% $section-red)
          .no-js &, .no-svg &
            +background(image_url("icons/inThisSection-arrow-down-white-@2x.png") no-repeat 11px 11px $section-red)
        // MBA
        .page-programs-mba &
          .svg &
            +background(image_url("icons/inThisSection-arrow-down-white.svg") no-repeat 85% 47% $section-blue-grey)
          .no-js &, .no-svg &
            +background(image_url("icons/inThisSection-arrow-down-white-@2x.png") no-repeat 11px 11px $section-blue-grey)
        // Faculty
        .page-faculty-research &
          .svg &
            +background(image_url("icons/inThisSection-arrow-down-white.svg") no-repeat 85% 47% $grey-hp-7)
          .no-js &, .no-svg &
            +background(image_url("icons/inThisSection-arrow-down-white-@2x.png") no-repeat 11px 11px $grey-hp-7)
        // Insights
        .page-insights &
          background-color: $text-black
    .block-menu.open,
    .block-menu-block.open
      .content
        position: absolute
        top: 48px
        width: 100%
        z-index: 12
      // Executive Education
      .page-exec-ed &
        .content
          top: 49px
          left: 0
        h2
          color: $section-blue-grey
          .svg &
            +background(image_url("icons/inThisSection-arrow-up-grayblue.svg") no-repeat 85% 47% $grey-hp)
          .no-js &, .no-svg &
            +background(image_url("icons/inThisSection-arrow-up-grayblue-@2x.png") no-repeat 11px 11px $section-blue-grey)
      // MBA
      h2
        .page-programs-mba &
          color: $section-blue-grey
          .svg &
            +background(image_url("icons/inThisSection-arrow-up-grayblue.svg") no-repeat 85% 47% $grey-hp)
          .no-js &, .no-svg &
            +background(image_url("icons/inThisSection-arrow-up-grayblue-@2x.png") no-repeat 11px 11px $section-blue-grey)
      // MSX
      h2
        .page-programs-msx &
          color: $section-blue-grey
          .svg &
            +background(image_url("icons/inThisSection-arrow-up-grayblue.svg") no-repeat 85% 47% $grey-hp)
          .no-js &, .no-svg &
            +background(image_url("icons/inThisSection-arrow-up-grayblue-@2x.png") no-repeat 11px 11px $section-blue-grey)
      // Faculty and Research
      .page-faculty-research &
        .content
          top: 48px
        h2
          color: $grey-hp-7
          .svg &
            +background(image_url("icons/inThisSection-arrow-up-taupe.svg") no-repeat 85% 47% $grey-hp)
      // Alumni
      .page-alumni &
        .content
          top: 48px
        h2
          color: $section-red
          .svg &
            +background(image_url("icons/inThisSection-arrow-up-red.svg") no-repeat 85% 47% $grey-hp)

      .menu
        +background(linear-gradient(rgba(#e7e7e7, 0.5), rgba($white, 0.5)), $white)
        border-bottom: 10px solid $black
        display: block
        padding-left: 36px
        +breakpoint($bp-for-tablet-range)
          float: right
          padding-left: 30px
          width: 60%
          .menu
            width: 100%
        +breakpoint($bp-for-phone-only)
          padding-left: 35px


        .menu
          background: transparent
          border-bottom: 0
      .expanded.active-trail
        .menu
          +breakpoint($bp-for-tablet-range)
            float: unset
            padding-left: 15px // 50px in
            width:  100%
          +breakpoint($bp-for-phone-only)
            float: unset
            padding-left: 15px // 50px in
            width:  100%
          .expanded.active-trail
            .menu
              +breakpoint($bp-for-tablet-range)
                padding-left: 25px // 75px in
              +breakpoint($bp-for-phone-only)
                padding-left: 15px // 65px in
              .expanded.active-trail
                .menu
                  +breakpoint($bp-for-tablet-range)
                    padding-left: 20px // 95px in
                  +breakpoint($bp-for-phone-only)
                    padding-left: 15px // 85px in

// Section menu for responsive
#sidebar
  +breakpoint($bp-tablet-port-max)
    +background(none)
    margin-bottom: -40px
    height: 42px

    .page-programs &
      +background(none)
    .page-alumni &
      background: transparent
  //+breakpoint($bp-for-phone-tablet-range)
  ul.menu
    .active-trail
      //background-color: red
    li.expanded.collapsed
      ul.menu
        display: none
    li.expanded.collapsed.open
      ul.menu
        display: block
        +breakpoint($bp-for-tablet-range)
          width: 100%

